--- a/views/createField.ejs
+++ b/views/createField.ejs
@@ -76,23 +76,15 @@
               <textarea class="input" name="description" placeholder="Descripción de servicios" required="required"> </textarea>
           </div>
           
-          <div class="images-box">
+          <!-- <div class="upload-images">
             <label>Elige tres imágenes: </label>
 
-              <div class="custom-file">
-                <input type="file" class="custom-file-input-l" id="customFile">
-                <label class="custom-file-label" name="image1" for="customFile">Imagen 1</label>
-              </div>
-              <div class="custom-file">
-                <input type="file" class="custom-file-input-m" id="customFile">
-                <label class="custom-file-label" name="image2" for="customFile">Imagen 2</label>
-              </div>
-              <div class="custom-file">
-                <input type="file" class="custom-file-input-r" id="customFile">
-                <label class="custom-file-label" name="image3" for="customFile">Imagen 3</label>
-              </div>
-
-          </div>
+            <label class="custom-file">
+              <input type="file" id="file" name="image1" class="input">
+              <span class="control"></span>
+            </label>
+         
+          </div> -->
 
         <div><button type="submit" value="submit" class="btn btn-primary">GUARDAR</button></div>
       </form>
